GNOME Bugzilla – Bug 756165
broken code in geoclue handler
Last modified: 2015-10-14 09:52:35 UTC
Here's a stacktrace: https://retrace.fedoraproject.org/faf/reports/818033/ Looking at empathy-geoclue-helper.c:299, we find: static void client_cb (GObject *source, GAsyncResult *result, gpointer user_data) { GTask *task = user_data; EmpathyGeoclueHelper *self = g_task_get_source_object (task); GError *error = NULL; self->priv->client = gclue_client_proxy_new_finish (result, &error); if (!gclue_client_proxy_new_for_bus_finish (result, &error)) { ... so you are calling two different finish methods on the same result. That can't work.
*** Bug 756290 has been marked as a duplicate of this bug. ***
Created attachment 313209 [details] [review] Call finish only once
Thanks for your patch! I don't know if I have the time to test it, but I have a question. Is there an option or any other way to switch of geoclue temporarily? I've tried already: 1. $ gnome-control-center 2. -> Privacy 3. Location Services = off But that doesn't help.
Review of attachment 313209 [details] [review]: Thanks, Pranav. It looks good to me. ::: libempathy-gtk/empathy-geoclue-helper.c @@ +295,3 @@ + self->priv->client = gclue_client_proxy_new_for_bus_finish (result, &error); + if (self->priv->client == NULL) I wonder how this could have worked till now.