libempathy-gtk: Call the finish method only once

https://bugzilla.gnome.org/show_bug.cgi?id=756165